--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
-		"linecorp/line-bot-sdk": "^2.3"
+        "linecorp/line-bot-sdk": "^2.3",
+        "stripe/stripe-php": "^6.37"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
